Added argon2 library and moved sqlite-jdbc to the new lib directory. Updated the JAR making function and the build run scripts in build.sh and as always the README script.